Fix Gigabeat F manual.  Thanks to Marianne Arnold for pointing out it was broken.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22521 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/remote-keymap-gigabeat.tex
+++ b/manual/platform/remote-keymap-gigabeat.tex
@@ -66,7 +66,7 @@
 \newcommand{\ActionRCKbdDown}{}
 
 %Button actions, Pitch Screen context
-\newcommand{\ActionRCPsToggleMode}{Long \ButtonPlay}
+\newcommand{\ActionRCPsToggleMode}{Long \ButtonRCPlay}
 \newcommand{\ActionRCPsIncSmall}{\ButtonRCVolUp}
 \newcommand{\ActionRCPsIncBig}{Long \ButtonRCVolUp}
 \newcommand{\ActionRCPsDecSmall}{\ButtonRCVolDown}
