Quickscreen: 4th item
This adds a 4th top item to the quickscreen. It's as configurable as the existing three items.
This patch goes along with optimisations for small screens for better displaying of all four items. 14px font is very usable on a 64px height display for example.
Left and Top items go through the items in the opposite direction, so that you can mirror a setting and toggle through it in both directions.
Default item is party mode, as it's target independant.

Flyspray: FS#9706

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22532 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -12464,3 +12464,20 @@
     swcodec: "Geschwindigkeit"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_TOP_QS_ITEM
+  desc: used for the submenu name for the quickscreen items
+  user: core
+  <source>
+    *: none
+    quickscreen: "Set as Top Quickscreen Item"
+  </source>
+  <dest>
+    *: none
+    quickscreen: "Als obere Schnelleinstellung verwenden"
+  </dest>
+  <voice>
+    *: none
+    quickscreen: "Als obere Schnelleinstellung verwenden"
+  </voice>
+</phrase>
