Update the manual to reflect the recent addition of the 4th item to the quickscreen..
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22542 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -262,7 +262,8 @@ pages of information.}
 \section{\label{ref:QuickScreen}Quick Screen}
   Although the \setting{Quick Screen} is accessible from nearly everywhere,
   not just the \setting{Main Menu}, it is worth mentioning here.  It allows
-  rapid access to your three favourite settings.  The default settings are
+  rapid access to your four favourite settings.  The default settings are
+  \setting{Party Mode},
   \setting{Shuffle} (\reference{ref:PlaybackSettings}),
   \setting{Repeat} (\reference{ref:PlaybackSettings}) and the
   \setting{Show Files} (\reference{ref:ShowFiles}) options, but almost all
@@ -273,5 +274,9 @@ pages of information.}
   
   Press \ActionStdQuickScreen{} to access it and \ActionQuickScreenExit{} to exit.
   The direction buttons will modify the individual setting values as indicated 
-  by the arrow icons.
+  by the arrow icons. Please note that the settings at opposite sides of the
+   screen cycle through the available options in opposite directions.
+   Therefore if you select the same setting at e.g. the top and bottom of the
+   quickscreen, then pressing up and down will cycle through this setting in
+   opposite directions.
 }
