Add the select button as exit button for the e200's quickscreen, and update the manual (fuze entry was not wrong also).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22543 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/keymap-e200.tex
+++ b/manual/platform/keymap-e200.tex
@@ -19,7 +19,7 @@
 \newcommand{\ActionStdCancel}{\ButtonLeft}
 \newcommand{\ActionStdContext}{Long \ButtonSelect}
 \newcommand{\ActionStdQuickScreen}{Long \ButtonDown}
-\newcommand{\ActionQuickScreenExit}{\ButtonPower}
+\newcommand{\ActionQuickScreenExit}{\ButtonSelect}
 \newcommand{\ActionStdMenu}{\ButtonDown}
 \newcommand{\ActionStdOk}{\ButtonSelect{} or \ButtonRight}
 \newcommand{\ActionStdRec}{Long \ButtonRec}
