Manual: Fix the vertical spacing in the first and the last rows in tables
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22553 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -103,8 +103,8 @@
 \newcounter{example}[chapter]
 
 \ifpdfoutput{%
-  \setlength{\belowrulesep}{0pt}
-  \setlength{\aboverulesep}{0pt}
+  \renewcommand{\toprule}{\specialrule{\heavyrulewidth}{\abovetopsep}{0pt}}
+  \renewcommand{\midrule}{\specialrule{\lightrulewidth}{0pt}{\belowrulesep}}
   }{}
 \newcommand{\tblhdrstrut}{\rule[-1.3ex]{0mm}{4.0ex}}
 
