Update the french translation.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22564 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -12674,3 +12674,20 @@
     swcodec: "Limiteur préampli"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_TOP_QS_ITEM
+  desc: used for the submenu name for the quickscreen items
+  user: core
+  <source>
+    *: none
+    quickscreen: "Set as Top Quickscreen Item"
+  </source>
+  <dest>
+    *: none
+    quickscreen: "Ajouter aux raccourcis comme item du haut"
+  </dest>
+  <voice>
+    *: none
+    quickscreen: "Ajouter aux raccourcis comme item du haut"
+  </voice>
+</phrase>
