--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -262,12 +262,14 @@
   user: core
   <source>
     *: "PLAY = Yes"
+    cowond2*: "MENU = Yes"
     h100,h120,h300: "NAVI = Yes"
     yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Sì"
+    cowond2*: "MENU = Sì"
     h100,h120,h300: "NAVI = Sì"
     yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Sì"
     mrobe500: "PLAY o POWER = Sì"
@@ -12643,5 +12645,22 @@
   <voice>
     *: none
     swcodec: "Limitatore Preamp"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOP_QS_ITEM
+  desc: used for the submenu name for the quickscreen items
+  user: core
+  <source>
+    *: none
+    quickscreen: "Set as Top Quickscreen Item"
+  </source>
+  <dest>
+    *: none
+    quickscreen: "Imposta Come Superiore Nel Menu Rapido"
+  </dest>
+  <voice>
+    *: none
+    quickscreen: "Imposta Come Superiore Nel Menu Rapido"
   </voice>
 </phrase>
