--- a/manual/platform/keymap-ipod1g2g.tex
+++ b/manual/platform/keymap-ipod1g2g.tex
@@ -17,7 +17,7 @@
 \newcommand{\ActionStdCancel}{\ButtonLeft{} or Long \ButtonPlay}
 \newcommand{\ActionStdContext}{Long \ButtonSelect}
 \newcommand{\ActionStdQuickScreen}{Long \ButtonMenu}
-\newcommand{\ActionQuickScreenExit}{\ButtonMenu}
+\newcommand{\ActionQuickScreenExit}{\ButtonSelect}
 \newcommand{\ActionStdMenu}{\ButtonMenu}
 \newcommand{\ActionStdOk}{\ButtonSelect{} or \ButtonRight}
 
