--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -4163,7 +4163,7 @@
   <dest>
     *: none
     rtc: "ON = Ustaw"
-    mrobe500: = "Serce = Ustaw"
+    mrobe500: "HEART = Ustaw"
     h100,h120,h300: "NAVI = Ustaw"
     ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Ustaw"
     sa9200:"PLAY = Ustaw"
