Manual section for the pitch detector (this is just the beginning)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22667 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -185,6 +185,8 @@ the associated file. Viewers are stored in the
 
 {\input{plugins/metronome.tex}}
 
+\opt{swcodec}{\opt{recording_mic}{\input{plugins/pitch_detector.tex}}}
+
 {\input{plugins/random_folder_advance_config.tex}}
 
 \opt{lcd_color}{\input{plugins/rockpaint.tex}}
