--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12702,7 +12702,7 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
