--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -12658,7 +12658,7 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
