--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -12639,7 +12639,7 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
