--- a/apps/lang/svenska.lang
+++ b/apps/lang/svenska.lang
@@ -12632,7 +12632,7 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
