--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -12440,7 +12440,7 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
